# cInspector

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
test/: test.py
